@@ -5,6 +5,10 @@
    * Improved reporting of thread numbers during startup in setup mode.
      (Peter Smith and Kenneth Lavrsen)
      http://www.lavrsen.dk/twiki/bin/view/Motion/SlightlyImprovedThreadCreationLogging
+   * Ffmpeg code mutex locking fix (Peter Smith)
+     http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2006x04x07x164654
+   * Ffmpeg avicodec logging improved (Peter Smith)
+     http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2006x04x07x164654
 
 3.2.6 Formal Bugfix Release.
    * Fixed bug where variables time_last_frame and time_current_frame had been
